# auth

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_audit_and_sessions.py
auth/: config.py  database.py  docs.py  main.py  models.py  notify_client.py  schemas.py  security.py  services.py
auth/routers/: __init__.py  auth.py  config.py  users.py
docs/: check.md  config.md  login.md  otp-request.md  refresh.md  register.md  roles.md  transition.md
notify/: otp.md
src/auth_service/: cli.py  main.py
src/auth_service/audit/: models.py  router.py  schemas.py  service.py
src/auth_service/auth/: router.py  schemas.py  service.py
src/auth_service/clients/: models.py  router.py  schemas.py  service.py
src/auth_service/config_app/: models.py  router.py  schemas.py  service.py
src/auth_service/core/: config.py  database.py  deps.py  docs.py  exceptions.py  logging.py  middleware.py  rate_limit.py  security.py
src/auth_service/notify/: client.py
src/auth_service/roles/: models.py  router.py  schemas.py  service.py
src/auth_service/sessions/: models.py  router.py  schemas.py  service.py
src/auth_service/users/: models.py  router.py  schemas.py  service.py
tests/: conftest.py  test_auth_flow.py  test_cli.py  test_health.py  test_notify_live.py  test_oauth.py  test_observability.py  test_sessions.py
