[project]
name = "auth-service"
version = "0.5.0"
description = "FastAPI authentication service: OTP + JWT + M2M OAuth2 client_credentials"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "pyjwt>=2.9",
    "slowapi>=0.1.9",
    "httpx>=0.28",
    "typer>=0.12",
]

[project.scripts]
auth-cli = "auth_service.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.32",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auth_service"]

[tool.ruff]
line-length = 110
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "S", "ASYNC", "RUF"]
ignore = ["S101", "B008", "S105", "S106", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106", "S311"]
"alembic/*" = ["E501"]
"src/auth_service/cli.py" = ["S104", "S603", "B006"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "notify_live: tests that hit the real Notify service at AUTH_NOTIFY_BASE_URL",
]
